--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ workflows:
 jobs:
   build:
     working_directory: ~/mern-starter
+    #test
     docker:
       - image: circleci/node:10.16.3
       - image: mongo:4.2.0
